--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <title>Discord</title>
         <link rel="stylesheet" href="./style.css">
     </head>
-    <body>
+    <body class="debug">
         <!-- header -->
-        <header></header>
+        <header class="flex-container">
+            <div id="logo">logo</div>
+            <div id="link">link link link</div>
+            <div id="login">login</div>
+        </header>
         <!-- main -->
         <main></main>
         <!-- footer -->        
