--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
             <div id="login">login</div>
         </header>
         <!-- main -->
-        <main></main>
+        <main>
+
+            <section class="flex-container" id="bg-sec1">
+                <div id="item-sec1"></div>
+            </section>
+
+            <section class="flex-container" id="bg-sec2">
+                <div id="item1-sec2"></div>
+                <div id="item2-sec2"></div>
+            </section>
+
+
+        </main>
         <!-- footer -->        
         <footer></footer>
     </body>
