--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
                 <div id="item2-sec2"></div>
             </section>
 
+            <section class="flex-container" id="bg-sec3">
+                <div id="item1-sec3"></div>
+                <div id="item2-sec3"></div>
+            </section>
 
+            <section class="flex-container" id="bg-sec2">
+                <div id="item1-sec2"></div>
+                <div id="item2-sec2"></div>
+            </section>
+
+            <section class="flex-container" id="bg-sec4">
+                <div id="item-sec4"></div>
+            </section>
         </main>
         <!-- footer -->        
         <footer></footer>
