comments + final commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         </header>
         <!-- main -->
         <main>
-
             <section class="flex-container" id="bg-sec1">
                 <div id="item-sec1"></div>
             </section>
@@ -35,11 +34,26 @@
                 <div id="item2-sec2"></div>
             </section>
 
-            <section class="flex-container" id="bg-sec4">
-                <div id="item-sec4"></div>
+            <section class="flex-container" id="bg-sec5">
+                <div id="item-sec5"></div>
             </section>
         </main>
         <!-- footer -->        
-        <footer></footer>
+        <footer>
+            <section class="flex-container" id="bg-foot1">
+                <div id="item1-foot1"></div>
+                <div id="item2-foot1"></div>
+                <div id="item3-foot1"></div>
+                <div id="item4-foot1"></div>
+                <div id="item5-foot1"></div>
+            </section>
+
+            <section class="flex-container" id="bg-foot2">
+                <div class="flex-container-foot" id="item1-foot2">
+                    <div class="bg-sub-item-foot">Logo</div>
+                    <div class="bg-sub-item-foot">Bottone</div>
+                </div>
+            </section>
+        </footer>
     </body>
 </html>
