--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
 
             <section class="flex-container" id="bg-foot2">
-                <div class="flex-container-foot" id="item1-foot2">
+                <div class="flex-container-foot" id="item-foot2">
                     <div class="bg-sub-item-foot">Logo</div>
                     <div class="bg-sub-item-foot">Bottone</div>
                 </div>
